2004-08-29  Michael Stucki  <mundaun@gmx.ch>

	* Changed the file structured, starting to work on it

2004-08-13  Michael Stucki  <mundaun@gmx.ch>

	* Initial upload
